--- a/Clases/UNIDAD 1/5. Flujo de Control.ipynb
+++ b/Clases/UNIDAD 1/5. Flujo de Control.ipynb
@@ -57,6 +57,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero es igual a 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input(\"Ingrese numero\"))\n",
+    "if a==5:\n",
+    "    print(\"El numero es igual a 5\")\n",
+    "else:\n",
+    "    print(\"El numero no es igual a 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -722,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
