--- a/Clases/UNIDAD 5/1. Intro a Pandas.ipynb
+++ b/Clases/UNIDAD 5/1. Intro a Pandas.ipynb
@@ -4655,10 +4655,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= \"10\"\n",
+    "\n",
+    "b= \"5\"\n",
+    "\n",
+    "c=a+b\n",
+    "\n",
+    "print(c)"
+   ]
   }
  ],
  "metadata": {
@@ -4677,7 +4693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
